# vegu

./: CMakeLists.txt  README.md
cmake/: common.cmake
src/: CMakeLists.txt  main.cpp  main_window.cpp  main_window.hpp  main_window.ui
src/action_manager/: action_manager.cpp  action_manager.hpp
src/bars/: menu_bar.cpp  menu_bar.hpp
src/canvas/: canvas.cpp  canvas.hpp  canvas_loader.cpp  canvas_loader.hpp  canvas_view.cpp  canvas_view.hpp
src/inspector/: inspector.cpp  inspector.hpp
src/scene/: scene.cpp  scene.hpp  scene_object.cpp  scene_object.hpp  scene_object_properties.cpp  scene_object_properties.hpp  scene_tree.cpp  scene_tree.hpp
src/scene/objects/: circle_object.cpp  circle_object.hpp  ellipse_object.cpp  ellipse_object.hpp  line_object.cpp  line_object.hpp  rectangle_object.cpp  rectangle_object.hpp
src/tools/: circle_tool.cpp  circle_tool.hpp  ellipse_tool.cpp  ellipse_tool.hpp  line_tool.cpp  line_tool.hpp  move_tool.cpp  move_tool.hpp  rectangle_tool.cpp  rectangle_tool.hpp  rotation_tool.cpp  rotation_tool.hpp  scaling_tool.cpp  scaling_tool.hpp  selection_tool.cpp  selection_tool.hpp  tool.cpp  tool.hpp  tool_bar.cpp  tool_bar.hpp
src/viewport/: viewport.cpp  viewport.hpp
